clapi_macros/test_suite/tests/ui/fail/invalid_subcommand_value/invalid_subcommand_about.stderr
error: custom attribute panicked
 --> $DIR/invalid_subcommand_about.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: `about` is expected to be string literal
